# BIaaS

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  build_index.py  pyproject.toml
app/: deps.py  main.py  utils.py
app/core/: config.py  constants.py  container.py  exceptions.py
app/llm/: __init__.py  factory.py
app/llm/models/: __init__.py  base.py  gemini.py  groq.py  ollama.py
app/schemas/: dataset.py
app/services/: analysis_service.py  api_query_agent_service.py  dataset_service.py  dataset_validator_service.py  faiss_index_service.py  faiss_service.py  insights_service.py  plot_service.py  visual_planner_service.py
biaas/: api_query_agent.py  config.py  exceptions.py  faiss_index.py  llm_adapter.py  utils.py
biaas/core/: config.py
biaas/dataset/: analysis.py  validator.py  visualizer.py
biaas/llm/: __init__.py  factory.py  interpreter.py  models.py  visualizer.py
biaas/llm/models/: base.py  gemini.py  groq.py  ollama.py
biaas/services/: analysis_service.py  api_query_agent_service.py  dataset_validator_service.py  faiss_service.py  insights_service.py  plot_service.py  visual_planner_service.py
scripts/: build_index.py  healthcheck.py  preload_models.py
